# pyptx

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  bench_kernels.py  hatch_build.py  mkdocs.yml  pyproject.toml
.github/workflows/: build-wheels.yml  ci.yml  deploy-docs.yml  generate-docs.yml
benchmarks/: bench_ampere_kernels.py  bench_blackwell_gemm.py  bench_blackwell_kernels.py  bench_final.py  bench_hopper_gemm.py  cutlass_hopper_fmha_reference.py  diff_flash_attention_structure.py  pallas_pyptx_bench.py  run_all.sh  triton_gemm.py  triton_pyptx_bench.py
docs/: CNAME  comparison.md  getting-started.md  how-it-works.md  index.md  install.md  performance.md  philosophy.md  robots.txt  transpiler.md
docs/api/: cache.md  index.md  jax_support.md  kernel.md  ptx.md  pyptx.md  reg.md  smem.md  specs.md  torch_support.md  types.md  wgmma_layout.md
docs/assets/: extra.css
docs/examples/: index.md
docs/guides/: ampere.md  blackwell-gemm.md  debugging.md  first-kernel.md  fragment-layouts.md  grouped-gemm.md  handwritten-gemm.md  mbarriers.md  ptx-namespace.md  rms-norm.md  smem.md  swiglu.md  tiles-layouts-tma.md
docs/runtime/: jax.md  torch-compile.md  torch.md
docs/scripts/: generate_docs.py
examples/: __init__.py
examples/ampere/: flash_norm.py  gemm.py  gemm_highperf_ampere.py  gemm_pipelined.py  layer_norm.py  rms_norm.py  softmax.py  swiglu.py
examples/blackwell/: __init__.py  gemm_experimental_blackwell.py  gemm_highperf_blackwell.py  grouped_gemm.py  layer_norm.py  rms_norm.py  softmax.py  swiglu.py  tcgen05_accum_probe.py  tcgen05_epilogue_partition_probe.py  tcgen05_ld_phase_probe.py  tcgen05_ld_register_probe.py  tcgen05_mma_probe.py  tcgen05_roundtrip.py  tcgen05_smoke.py  tcgen05_suite.py
examples/hopper/: __init__.py  flash_norm.py  gemm_highperf_hopper.py  (+5 more)
pyptx/: __init__.py  _arch.py  _intrinsic.py  _trace.py  cache.py  jax_support.py  kernel.py  ptx.py  reg.py  smem.py  specs.py  torch_support.py  types.py  wgmma_layout.py
tests/: _k_loop_scratch.py  _nvrtc_reference.py  _run_direct_ptx.py  _run_nvrtc_ref.py  _test_both_waits_first.py  _test_different_smem.py  _test_kloop_dbbuf.py  _test_kloop_jax.py  _test_kloop_jax_trace.py  _test_lazy_init.py  _test_multi_cta_gemm.py  _test_release_128.py  _test_release_bar.py  _test_tma_fence.py  _test_tma_store_after_wgmma.py  _test_tma_wgmma_tma.py  _test_torch_all.py  _test_torch_fa.py  _test_torch_rms_norm.py  _test_two_bars_128.py  _test_two_wgmma.py  _test_wgmma_frag_layout.py  _test_wgmma_kloop_v2.py  conftest.py  test_codegen.py  test_dsl_wrappers.py  test_emitter.py  test_external_corpus.py  test_gpu_execution.py  test_highlevel.py  test_intrinsic.py  test_ir.py  test_jax_integration.py  test_kernel_templates.py  test_lexer.py  test_mma_sync.py  test_parser.py  test_pipeline.py  test_pipeline_full.py  test_reg_alloc.py  (+8 more)
(+74 files in other folders)
