[build-system]
# jaxlib installed at build time on Linux so the shim compiles with
# XLA FFI support baked in. XLA FFI v1 ABI is stable, so the resulting
# .so works for end users on jaxlib >=0.4.20. Not needed on non-Linux
# since the wheel there is pure-python (see hatch_build.py).
requires = [
    "hatchling",
    'jaxlib>=0.5.0; sys_platform == "linux"',
]
build-backend = "hatchling.build"

[project]
name = "pyptx"
version = "0.1.1"
description = "Python DSL for writing PTX kernels, callable from JAX, PyTorch, and torch.compile"
requires-python = ">=3.10"
license = "Apache-2.0"
readme = "README.md"
authors = [
    { name = "Patrick Toulmé" },
]
keywords = ["cuda", "ptx", "gpu", "jax", "pytorch", "hopper", "wgmma", "tensor-cores"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Compilers",
    "Operating System :: POSIX :: Linux",
]

# Zero required dependencies. JAX and PyTorch are optional — the DSL,
# parser, emitter, and transpiler all work without either. GPU
# execution via @kernel needs one of:
#   pip install pyptx[jax]    — for @jax.jit
#   pip install pyptx[torch]  — for PyTorch eager and torch.compile
#   pip install pyptx[all]    — both
dependencies = []

[project.optional-dependencies]
jax = ["jax[cuda12]>=0.4.20", "cuda-python>=12.3"]
torch = ["torch>=2.1", "cuda-python>=12.3"]
docs = [
    "mkdocs-material[imaging]>=9.5",
    "mkdocstrings[python]>=0.25",
    "ruff>=0.6",
]
all = ["pyptx[jax]", "pyptx[torch]"]
dev = ["pytest>=7.0", "pytest-xdist", "numpy"]

[project.urls]
Homepage = "https://pyptx.dev"
Repository = "https://github.com/patrick-toulme/pyptx"
Issues = "https://github.com/patrick-toulme/pyptx/issues"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["pyptx"]
# libpyptx_shim.so is added dynamically by hatch_build.py only when
# actually compiled. No static artifacts entry so stale local .so files
# never leak into a pure-python wheel (PYPTX_BUILD_SHIM=0).

[tool.hatch.build.targets.wheel.force-include]
"pyptx/_shim/pyptx_launch.cc" = "pyptx/_shim/pyptx_launch.cc"
"pyptx/_shim/torch_ext.cpp" = "pyptx/_shim/torch_ext.cpp"
"pyptx/_shim/build.sh" = "pyptx/_shim/build.sh"
"examples" = "pyptx/examples"

[tool.pytest.ini_options]
testpaths = ["tests"]
